Project

General

Profile

Actions

Bug #38928

closed

non-default namespace images ignore pool level config overrides

Added by Mykola Golub about 5 years ago. Updated about 5 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

It tries to read pool metadata in its own namespace.


Related issues 1 (0 open1 closed)

Copied to rbd - Backport #38961: nautilus: non-default namespace images ignore pool level config overridesResolvedPrashant DActions
Actions #1

Updated by Mykola Golub about 5 years ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 27151
Actions #2

Updated by Jason Dillaman about 5 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Nathan Cutler about 5 years ago

  • Copied to Backport #38961: nautilus: non-default namespace images ignore pool level config overrides added
Actions #4

Updated by Nathan Cutler about 5 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF