librbd: look for pool metadata in default namespace

when applying pool level config overrides

Fixes: https://tracker.ceph.com/issues/38928
Signed-off-by: Mykola Golub <mgolub@suse.com>